--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="save">ذخیره</string>
     <string name="province">استان</string>
     <string name="team">تیم</string>
+    <string name="search">جست‌وجو</string>
 </resources>
