--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,10 @@
 <resources>
     <string name="app_name">Gardeshgari</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="save">ذخیره</string>
     <string name="province">استان</string>
     <string name="team">تیم</string>
     <string name="search">جست‌وجو</string>
-    <string name="search_hint">عبارت مورد نظر را جست‌وجو کنید.</string>
+    <string name="search_hint">عبارت مورد نظر را وارد کنید.</string>
 </resources>
